Added other files and sections

--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,5 @@ html{
 #about{background-color: #eee8d5;}
 #services{background-color: #93a1a1;}
 #portfolio{background-color: #268bd2;}
-#contact{background-color: #859900;}
+#contact{background-color: #f4f4f9;}
 #footer{background-color: #2aa198;}
