--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -11,10 +11,16 @@
 }
 
 .logo{
+    display: flex;
+    align-items: center;
     font-weight: none;
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: #2b2b2b;
+}
 
+.logo-image {
+    width: 80px; /* Increased size of the logo */
+    height: auto;
 }
 
 .nav-links{
@@ -34,6 +40,7 @@
     text-decoration: none;
     color: inherit; /* Use the current text color */
     cursor: pointer; /* Ensures the hand cursor appears */
+    font-size: 1.2rem;
     transition: color 0.3s ease;
 }
 
