--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,7 @@
     top: 0;
     z-index: 1000;
     background-color: #fff;
-    padding: 1rem 2rem;
+    padding: 0.5rem 2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -16,6 +16,7 @@
     font-weight: none;
     font-size: 2rem;
     color: #2b2b2b;
+    padding-top: 20px;
 }
 
 .logo-image {
